2025-XX Feature Update for Version Next (5.0.x)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -164,10 +164,12 @@
               service in 2026. </p>
             </p>
           </div>
+          
+          <hr>
+
         </div>
       </div>
     </div>
-    <hr>
   </section>
 
 
@@ -302,7 +304,6 @@
     </div>
   </section>
 
-
   <!-- Section 2 Header -->
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="conc-img"
     style="background-image: url(img/conc-light.png)">
@@ -376,7 +377,6 @@
     </div>
   </section>
 
-
   <!-- Section 3 Header -->
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="plat-img"
     style="background-image: url(img/plat-light.png)">
@@ -442,19 +442,19 @@
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
                 </div>
+                <hr>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <hr>
     </div>
   </section>
 
   <!-- Touch Point 4 - Wayfinding Signages - Platform  -->
   <section class="about-me-summ clearfix" style="padding-top: 7px; padding-bottom: 3px;">
-    <div class="wbnrfz_details_body">
+    <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -510,19 +510,19 @@
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
                 </div>
+                <hr>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <hr>
     </div>
   </section>
 
   <!-- Touch Point 5A - Route Diagrams -->
   <section class="about-me-summ clearfix" style="padding-top: 7px; padding-bottom: 3px;">
-    <div class="wbnrfz_details_body">
+    <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -579,19 +579,19 @@
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
                 </div>
+                <hr>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <hr>
     </div>
   </section>
 
   <!-- Touch Point 5B - Transfer Icon -->
   <section class="about-me-summ clearfix" style="padding-top: 7px; padding-bottom: 3px;">
-    <div class="wbnrfz_details_body">
+    <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -641,19 +641,19 @@
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
                 </div>
+                <hr>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <hr>
     </div>
   </section>
 
   <!-- Touch Point 6 - Platform Screen Doors Wayfinding -->
   <section class="about-me-summ clearfix" style="padding-top: 7px; padding-bottom: 3px;">
-    <div class="wbnrfz_details_body">
+    <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -711,19 +711,19 @@
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
                 </div>
+                <hr>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <hr>
     </div>
   </section>
 
   <!-- Touch Point 7A - Waiting Page  -->
-  <section class="about-me-summ clearfix" style="padding-top: 10px; padding-bottom: 3px;">
-    <div class="wbnrfz_details_body">
+  <section class="about-me-summ clearfix" style="padding-top: 7px; padding-bottom: 3px;">
+    <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -768,20 +768,19 @@
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
                 </div>
+                <hr>
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </div>
-    <hr>
     </div>
   </section>
 
   <!-- Touch Point 7B - Arrival Page for Non-Loop Service  -->
-  <section class="about-me-summ clearfix" style="padding-top: 10px; padding-bottom: 3px;">
-    <div class="wbnrfz_details_body">
+  <section class="about-me-summ clearfix" style="padding-top: 7px; padding-bottom: 3px;">
+    <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -811,20 +810,19 @@
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
                 </div>
+                <hr>
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </div>
-    <hr>
     </div>
   </section>
 
   <!-- Touch Point 7C - Arrival Page for Loop Service  -->
-  <section class="about-me-summ clearfix" style="padding-top: 10px; padding-bottom: 3px;">
-    <div class="wbnrfz_details_body">
+  <section class="about-me-summ clearfix" style="padding-top: 7px; padding-bottom: 3px;">
+    <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -854,21 +852,20 @@
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
                 </div>
+                <hr>
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </div>
-    <hr>
     </div>
   </section>
 
 
   <!-- Enhancements Overview -->
-  <section class="about-me-summ clearfix" style="padding-bottom: 10px; padding-top: 10px;">
-    <div class="wbnrfz_details_body">
+  <section class="about-me-summ clearfix" style="padding-bottom: 7px; padding-top: 7px;">
+    <div class="wbnrfz_details_body_tchp">
       <div class="container container-xxl">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -876,7 +873,7 @@
 
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <h2 class="mb-3 text-center"
-                  style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                  style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 7px;">
                   Enhancements Overview</h2>
                 <div class="banner-eicw">
                   <a href="img/ccl6-overview-light.png" id="evo3" class="portfolio-img">
@@ -889,7 +886,6 @@
         </div>
       </div>
     </div>
-    <hr>
     </div>
   </section>
 
