2025-XX Feature Update for Version Next (5.0.x)

--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -82,7 +82,7 @@
                                                 Home</a>
                                         </li>
                                         <li class="breadcrumb-item active"><a
-                                                href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                                                href="eicw.html">
                                                 EICW
                                             </a>
                                         </li>
