--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -67,7 +67,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-    style="background-image: url(img/cover-light.png); height: 100vh;">
+    style="background-image: url(img/cover-eicw-4.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -80,7 +80,7 @@
                     <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html">
                         Home</a>
                     </li>
-                    <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                    <li class="breadcrumb-item active"><a href="eicw.html">
                         EICW
                       </a>
                     </li>
