2025-XX Feature Update for Version Next (5.0.x)

--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -156,7 +156,7 @@
                   class="img-fluid" alt="cover-page"></a>
             </div>
 
-            <div class="details_single_img">
+            <div class="details_single_img wow fadeInUp" data-wow-delay="150ms">
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
