--- a/blog.html
+++ b/blog.html
@@ -128,25 +128,13 @@
                 </div>
             </div>
             <div class="row pw-portfolio">
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2025-01-22">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/EiaJAoM.png" alt>
-                        <div class="hover-content-blog">
-                            <h4>EICW - Implementation Brainstorming</h4>
-                            <a class="read" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
                     data-date="2024-10-12">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/Z6vKAa9.png" alt>
+                        <img src="https://i.imgur.com/lsSie7o.png" alt>
                         <div class="hover-content-blog">
                             <h4>If you can't beat them, join them</h4>
-                            <a class="read" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                            <a class="read" href="blog/wayfind-2.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                         </div>
                     </div>
@@ -158,7 +146,7 @@
                         <img src="https://i.imgur.com/Ny70zFt.png" alt>
                         <div class="hover-content-blog">
                             <h4>Personal V4 - A big redesign</h4>
-                            <a class="read" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                            <a class="read" href="blog/personal-v4-1.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                         </div>
                     </div>
@@ -167,10 +155,10 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
                     data-date="2024-06-30">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/fZdhMEU.png" alt>
+                        <img src="https://i.imgur.com/JFAxwwd.png" alt>
                         <div class="hover-content-blog">
                             <h4>New Wayfinding System - How has it been so far?</h4>
-                            <a class="read" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                            <a class="read" href="blog/wayfind.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                         </div>
                     </div>
