--- a/blog.html
+++ b/blog.html
@@ -129,13 +129,37 @@
             </div>
             <div class="row pw-portfolio">
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
+                data-date="2025-10-01">
+                <div class="single-portfolio-content">
+                    <img src="https://i.imgur.com/2XiV79F.png" alt>
+                    <div class="hover-content-blog">
+                        <h4>Personal Version 5.0 - Iterations & AI</h4>
+                        <a class="read" href="blog/personal-v5-0.html" class="portfolio-img"><i
+                                class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
+                    data-date="2024-10-12">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/2XiV79F.png" alt>
+                        <div class="hover-content-blog">
+                            <h4>Personal Version 4.4 - Optimizations Galore</h4>
+                            <a class="read" href="blog/personal-v4-3.html" class="portfolio-img"><i
+                                    class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
                     data-date="2024-10-12">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/lsSie7o.png" alt>
                         <div class="hover-content-blog">
                             <h4>If you can't beat them, join them</h4>
                             <a class="read" href="blog/wayfind-2.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -143,11 +167,11 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
                     data-date="2024-09-01">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/Ny70zFt.png" alt>
+                        <img src="https://i.imgur.com/f84Pcxo.png" alt>
                         <div class="hover-content-blog">
                             <h4>Personal V4 - A big redesign</h4>
                             <a class="read" href="blog/personal-v4-1.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -159,7 +183,7 @@
                         <div class="hover-content-blog">
                             <h4>New Wayfinding System - How has it been so far?</h4>
                             <a class="read" href="blog/wayfind.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
