2025-XX Feature Update for Version Next (5.0.x)

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
     </section>
 
     <!-- Summary -->
-    <section class="about-me-summ section-padding-80-0 clearfix" id="summary">
+    <section class="about-me-summ clearfix" style="padding-top: 4em; padding-bottom: 5em;" id="summary">
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12 sect-title">
@@ -180,7 +180,7 @@
     </section>
 
     <!-- Timelines -->
-    <section class="about-me-area bg-gray section-padding-80-0 clearfix" id="tm">
+    <section class="about-me-area bg-gray clearfix" style="padding-top: 4em; padding-bottom: 5em;" id="tm">
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
