--- a/blog.html
+++ b/blog.html
@@ -118,7 +118,7 @@
         </div>
     </section>
 
-    <section class="ftco-section-blog">
+    <section class="ftco-section-blog" style="padding-top: 4em; padding-bottom: 3em;">
         <div class="container container-xxl container-blogList">
             <div class="row">
                 <div class="col-12">
