--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -126,7 +126,7 @@
 
   <section class="about-me-summ clearfix">
 
-    <div class="pw-portfolio-area section-padding-80 clearfix">
+    <div class="pw-portfolio-area clearfix" style="padding-top: 1em; padding-bottom: 2em;">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
