--- a/worksbynrfz/mrt-signage-rep-s1-leg.html
+++ b/worksbynrfz/mrt-signage-rep-s1-leg.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>MyTransport.SG App Redesign | WBN</title>
+  <title>MRT Signages Concept/Replications S1 | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -82,7 +82,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/03mFKk0.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/9ynFmuE.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -95,7 +95,7 @@
                 </li>
               </ol>
             </nav>
-            <h2 class="page-title">MyTransport.SG App Redesign</h2>
+            <h2 class="page-title">MRT Signages Concept/Replications S1</h2>
           </div>
         </div>
       </div>
@@ -109,14 +109,14 @@
         <div class="col-lg-12">
           <div class="main-title">
             <span>LTA's New Wayfinding System</span>
-            <h1>MyTransport.SG App Redesign</h1>
+            <h1>MRT Signages Concept/Replications S1</h1>
           </div>
         </div>
 
         <div class="details_catagory_wrap">
           <div class="col-sm-3 single_catagory ">
             <span>Category</span>
-            <h4>Mockup Designs</h4>
+            <h4>Concepts & Replications</h4>
           </div>
           <div class="col-sm-3 single_catagory">
             <span>Project Year</span>
@@ -125,10 +125,10 @@
           <div class="col-sm-3 single_catagory">
             <span>Share Project</span>
             <div class="social_links">
-              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/myts-app.html"
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/mrt-signage-rep-s1.html"
                 title="Facebook">
                 <i class="fa-brands fa-facebook"></i> </a>
-              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/myts-app.html&text= MyTransport.SG App Redesign"
+              <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/mrt-signage-rep-s1.html&text= MRT Signages Concept/Replications S1"
                 title="X (Twitter)">
                 <i class="fa-brands fa-x-twitter"></i></a>
               <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
@@ -153,10 +153,10 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center;">An app concept of the redesigned MyTransport.SG App,
-                      updated with the current design language from the
-                      <a href="https://www.samuel-lim.com/singapore-mrt-signage-system">new wayfinding system</a>.
-                    </p>
+                    <p style="text-align: center;">An attempt to replicate the new signage designs, as well
+                      as to update older signages to the new <a
+                        href="https://www.samuel-lim.com/signage-system">wayfinding
+                        system.</a></p>
                   </div>
                 </div>
               </div>
@@ -165,37 +165,30 @@
 
             <div class="details_single_img">
               <div class="row">
-                <div class="col-lg-6 col-md-6">
+                <div class="col-lg-4 col-md-4">
                   <div class="thumb">
-                    <a href="https://imgur.com/1lEzi6x.png" class="portfolio-img"><img
-                        src="https://imgur.com/1lEzi6x.png" alt="ui-home"></a>
+                    <a href="https://i.imgur.com/mzlvATA.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/mzlvATA.png" alt="lcd-bp-tel"></a>
                   </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
+                <div class="col-lg-4 col-md-4">
                   <div class="thumb">
-                    <a href="https://imgur.com/wrbVSvd.png" class="portfolio-img"><img
-                        src="https://imgur.com/wrbVSvd.png" alt="ui-services"></a>
+                    <a href="https://i.imgur.com/lAywSdY.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/lAywSdY.png" alt="jur-plat-a"></a>
                   </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
+                <div class="col-lg-4 col-md-4">
                   <div class="thumb">
-                    <a href="https://imgur.com/LzB1Kva.png" class="portfolio-img"><img
-                        src="https://imgur.com/LzB1Kva.png" alt="ui-home-dark"></a>
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                  <div class="thumb">
-                    <a href="https://imgur.com/0mq1EqJ.png" class="portfolio-img"><img
-                        src="https://imgur.com/0mq1EqJ.png" alt="ui-services-dark"></a>
+                    <a href="https://i.imgur.com/pzPu1RE.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/pzPu1RE.png" alt="otp-psd"></a>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
 
+          </div>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
@@ -230,7 +223,7 @@
   <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
-    </script>
+  </script>
 
   <script src="../js/theme.js"></script>
 
