2025-XX Feature Update for Version Next (5.0.x)

--- a/blog.html
+++ b/blog.html
@@ -131,7 +131,7 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
                 data-date="2025-10-01">
                 <div class="single-portfolio-content">
-                    <img src="https://i.imgur.com/2XiV79F.png" alt>
+                    <img src="https://i.imgur.com/753URzQ.png" alt>
                     <div class="hover-content-blog">
                         <h4>Personal Version 5.0 - Iterations & AI</h4>
                         <a class="read" href="blog/personal-v5-0.html" class="portfolio-img"><i
