2025-XX Feature Update for Version Next (5.0.x)

--- a/blog.html
+++ b/blog.html
@@ -119,7 +119,7 @@
     </section>
 
     <section class="ftco-section-blog" style="padding-top: 4em; padding-bottom: 3em;">
-        <div class="container container-xxl container-blogList">
+        <div class="container-fluid container-blogList">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="row pw-portfolio">
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
                 data-date="2025-10-01">
                 <div class="single-portfolio-content">
                     <img src="https://i.imgur.com/753URzQ.png" alt>
@@ -140,7 +140,7 @@
                 </div>
             </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
                     data-date="2024-10-12">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/2XiV79F.png" alt>
