--- a/about.html
+++ b/about.html
@@ -456,7 +456,7 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="js/theme.js"></script>
+    <script src="js/theme-subPages.js"></script>
 
     <script src="js/jquery.min.js"></script>
 
