--- a/about.html
+++ b/about.html
@@ -315,7 +315,7 @@
                         <b>Sep 2023 - Jul 2024</b><br>
                         - Supply Assistant (GE) (2) - SBC CP ASA <br>
                         <b>Dec 2022 - Sep 2023</b><br>
-                        - Supply Assistant (GE) (1) - SBC CP GE Store - SBC CP ASA
+                        - Supply Assistant (GE) (1) - SBC CP GE Store
                     </p>
                 </div>
                 <div class="timeline-item">
