2025-06 Feature Update for Version Next (5.0.x)

--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -101,7 +101,7 @@
             </div>
             <div class="col-sm-4 single_catagory">
               <span>Project Year</span>
-              <h4>2024 - Present</h4>
+              <h4>2024</h4>
             </div>
             <div class="col-sm-4 single_catagory">
               <span>Share Project</span>
@@ -119,8 +119,9 @@
               </div>
             </div>
             <div class="single_catagory text-center">
-              <a class="btn wbnrfz_btn" href="https://nurafianzulkifli.github.io/eicw/" target="_blank"><i
-                  class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Microsite</a>
+              <a class="btn wbnrfz_btn"
+                href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"
+                target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Handbook</a>
             </div>
           </div>
         </div>
@@ -142,6 +143,8 @@
                     <p style="text-align: center; padding-bottom: 2em;">
                       A self-made handbook of how I explored different ways and ideas to
                       make the current Wayfinding system better. <br>
+                      This has now been expanded into <a href="../eicw/eicw.html">EICW</a> with more ideas
+                      being showcased. <br>
 
                       Covered in this Handbook:<br>
                       - Design Improvements <br>
