2025-05 Feature Update for Version 2505 (5.0.2)

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -284,7 +284,9 @@
                     While we wish
                     to do so, it requires time, manpower, and careful planning. Compared to metro systems overseas, some
                     signages
-                    also differ slightly, such as those of Taipei Metro and MTR."</blockquote>
+                    also differ slightly, such as those of Taipei Metro and MTR." <br>
+                    <cite> - <a href="https://imgur.com/9EFau4B">You Yuan - SMRT's Manager, Ops Support</a></cite>
+                  </blockquote>
                   <p>Hence this microsite could be useful in diving in and exploring different ideas that can be used to
                     make
                     the wayfinding
