2025-05 Feature Update for Version 2505 (5.0.3)

--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -155,19 +155,19 @@
 
                                 <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp"
                                     data-wow-delay="100ms" style="padding-top: 1em;">
-                                    <a href="#">
+                                    <a href="#typeface">
                                         <button class="btn">Font Typeface</button>
                                     </a>
-                                    <a href="#">
+                                    <a href="#colour">
                                         <button class="btn">Colour Palettes</button>
                                     </a>
-                                    <a href="#">
+                                    <a href="#ci-img">
                                         <button class="btn">Changes & Improvements over...</button>
                                     </a>
-                                    <a href="#">
+                                    <a href="#eia-img">
                                         <button class="btn">Existing Icon Assets</button>
                                     </a>
-                                    <a href="#">
+                                    <a href="#dsb-img">
                                         <button class="btn">Design Standards Brainstorm</button>
                                     </a>
                                 </div>
@@ -175,7 +175,7 @@
                             </div>
 
                             <!-- Font Typeface -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="typeface">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Font
@@ -189,7 +189,7 @@
                             </div>
 
                             <!-- Colour Palettes -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="colour">
                                 <h2 class="mb-3"
                                     style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
                                     Colour
