2025-05 Feature Update for Version 2505 (5.0.3)

--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -138,10 +138,10 @@
                                 </div>
                             </div>
                             <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
-                                <a href="#">
+                                <a href="#iu-img">
                                     <button class="btn">Let's get more experimental!</button>
                                 </a>
-                                <a href="#">
+                                <a href="#ie-img">
                                     <button class="btn">Implementation Explorations</button>
                                 </a>
                             </div>
