--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -136,10 +136,10 @@
                 </div>
               </div>
               <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
-                <a href="#">
+                <a href="#iu-img">
                   <button class="btn">Customized Designs</button>
                 </a>
-                <a href="#">
+                <a href="#postface">
                   <button class="btn">Postface</button>
                 </a>
               </div>
@@ -274,7 +274,7 @@
             <div class="row justify-content-center">
 
               <!-- Postface -->
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="postface">
                 <div class="info justify-content-center">
                   <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Postface
                   </h2>
