2025-05 Feature Update for Version 2505 (5.0.4a)

--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -130,10 +130,11 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">The Buses' side of things needs love too!</h2>
-                  <p style="text-align: left;">This section is dedicated specially to display my ideas & concepts on how
-                    I envision the current Wayfinding systems can be applied. It's ok to be ambitious here. The sky is
-                    the limit! <i>More ideas will be uploaded as soon as it's ready! Stay tuned!</i></p>
+                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">The Buses' side
+                    of things needs love too!</h2>
+                  <p style="text-align: left;">This section is catered for the Buses side of things - signages and what
+                    not. A lot of focus has been given to the Train's side of things, so why not show the same love for
+                    the Buses' side of things too?</i></p>
                 </div>
               </div>
               <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
@@ -173,14 +174,16 @@
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;">Bus Route Diagrams
-                Signages for
-                key Bus Stops</h2>
-              <p style="text-align: left;">Introducing new Bus Route Diagrams Signages for key Bus Stops! (e.g. MRT
-                Stations, Hospitals etc). The route diagrams are here to help commuters visualize roughly the direction
-                of services.
-                <br> For full route
-                details, commuters can refer to the Bus Services Board which lists down the whole Bus Stops.
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;">Wayfinding Signages
+                for Bus Interchanges/Terminals</h2>
+              <p style="text-align: left;"> Let's take the newly opened Integrated Transport Hub (ITH) at Pasir Ris as
+                an example. While it has already adopted the current wayfnding systems, the implementation, in my
+                opinion, leaves much to be desired.
+              </p>
+
+              <p style="text-align: left;"> Firstly, for the Wayfinding Icons, I find them too cluttered as everything
+                has been lumped together. I feel, it should prioritize showing the Exits first, followed by the
+                different Landmarks or Facilities.
               </p>
             </div>
 
@@ -192,36 +195,7 @@
             </div>
           </div>
 
-          <!-- User Interfaces - LCD Screens -->
-          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
-            <div class="info justify-content-center">
 
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1.2em;">User Interfaces -
-                LCD Screens
-              </h2>
-              <p style="text-align: left;">In aligning with the current Wayfinding System, I have incorporated the
-                elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
-                navigate and understand the information presented, regardless of their familiarity with the system.
-                These user interfaces are designed to be intuitive and visually appealing, enhancing the overall
-                commuting experience.</p>
-
-              <p style="text-align: left;">For the LCD screens on the TEL trains, I have redesigneed it to look exactly
-                like the other counterparts on the NSL, EWL, NEL and CCL.</p>
-            </div>
-
-            <div class="banner-eicw">
-              <a href="img/lcd-light.png" id="lcd1" class="portfolio-img">
-                <img src="img/lcd-light.png" id="lcd1-img" class="img-fluid" alt="lcd1">
-              </a>
-
-              <div class="banner-eicw">
-                <a href="img/lcd2-light.png" id="lcd2" class="portfolio-img">
-                  <img src="img/lcd2-light.png" id="lcd2-img" class="img-fluid" alt="lcd2">
-                </a>
-                <hr>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
