--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -111,6 +111,9 @@
             <a href="#">
               <button class="btn">CCL6 and the way forward.</button>
             </a>
+            <a href="eicw-5.html">
+              <button class="btn">The Buses' side of things needs love too!</button>
+            </a>
           </div>
         </div>
       </div>
@@ -205,7 +208,8 @@
               </div>
 
             </div>
-            <p class="wow fadeInUp" data-wow-delay="100ms" style="text-align: center;">I will showcase my redesigns in different parts, as follows:
+            <p class="wow fadeInUp" data-wow-delay="100ms" style="text-align: center;">I will showcase my redesigns in
+              different parts, as follows:
             </p>
 
             <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms"
